# cheat

./: README.md  TODO.md  requirements.txt  setup.cfg  setup.py
autocomplete/: cheat.bash
cheat/: __init__.py  sheet.py  sheets.py  utils.py
