[bumpversion]
current_version = 2.4.0
commit = True
tag = True

[metadata]
name = cheat
version = attr: cheat.__version__
description = Fork of chrisallenlane/cheat
long_description = file: README.md
long_description_content_type = text/markdown
url = 'https://github.com/chrisallenlane/cheat',
author = Fredrik Larsen
license = GPL3
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: System Administrators
	Programming Language :: Python :: 3
	Programming Language :: Python

[options]
include_package_data = True
# package_dir =
# 	= src/
packages = find:
install_requires = 
	pygments >= 2.2

[options.packages.find]
# where = src
include = 
	cheat
	cheat.*

[options.extras_require]
dev = 
	build
	bump2version ~= 1.0

# [options.entry_points]
# console_scripts = 
# 	cheat = bin/cheat

[bdist_wheel]
universal = 1

[bumpversion:file:cheat/__init__.py]
